--- a/inventory/inventory.ini
+++ b/inventory/inventory.ini
@@ -1,4 +1,6 @@
 [swos_devices]
-swos1 ansible_host=192.168.1.1 password="xyz" ansible_connection=local
+swos1 ansible_host=192.168.1.1 password="xyz"
 [jetstream_devices]
-js ansible_host=192.168.1.1 password="xyz" ansible_connection=local
+js1 ansible_host=192.168.1.1 password="xyz"
+[mikrotik_devices]
+routeros1 ansible_host=192.168.1.1 ansible_password="xyz"
