--- a/playbooks/backup_routeros.yml
+++ b/playbooks/backup_routeros.yml
@@ -1,6 +1,7 @@
 - name: Backup MikroTik RouterOS Device
   hosts: mikrotik_devices
   gather_facts: false
+  connection: local
 
   vars:
     local_backup_directory: "/ansible/backup"
