--- a/playbooks/backup_routeros.yml
+++ b/playbooks/backup_routeros.yml
@@ -8,15 +8,23 @@
     ansible_user: admin
 
   tasks:
-    - name: Run /export command and capture output
-      ansible.builtin.raw: >
-        sshpass -p '{{ ansible_password }}'
-        ssh -o StrictHostKeyChecking=no {{ ansible_user }}@{{ ansible_host }} /export
-      register: export_output
-      delegate_to: localhost
-
-    - name: Save export output to a local file
-      ansible.builtin.copy:
-        dest: "{{ local_backup_directory }}/{{ ansible_host | replace('.', '_') }}_routeros_export.rsc"
-        content: "{{ export_output.stdout }}"
-      delegate_to: localhost
+    - block:
+      - name: Run /export command and capture output
+        ansible.builtin.raw: >
+          sshpass -p '{{ ansible_password }}'
+          ssh -o StrictHostKeyChecking=no {{ ansible_user }}@{{ ansible_host }} /export
+        register: export_output
+        delegate_to: localhost
+  
+      - name: Save export output to a local file
+        ansible.builtin.copy:
+          dest: "{{ local_backup_directory }}/{{ ansible_host | replace('.', '_') }}_routeros_export.rsc"
+          content: "{{ export_output.stdout }}"
+        delegate_to: localhost
+        
+      rescue:
+        - name: A task failed, sending notification to teams
+          include_tasks: notify_teams.yml
+          vars:
+            failed_task: "{{ ansible_failed_task.name | default('Unknown Task') }}"
+            failed_host: "{{ ansible_host }}"
